[tool.poetry]
name = "vk-dl"
version = "0.1.0"
description = ""
authors = ["Andrey Raspopov <raspopov@arrival.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
numpy = "^1.23.5"
eventlet = "^0.33.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
